todo.txt

x - better handling of path completion for kernels
x - add inline plotting to scilab kernel


test on Windows

py33, and py34 do not work at all

py26 errors:

FAIL: Send ndarrays and make sure we get the same array back
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/tests/test_numpy.py", line 97, in test_ndarrays
    outgoing)
AssertionError

======================================================================
FAIL: Send scalar numpy types and make sure we get the same number back.
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/tests/test_numpy.py", line 53, in test_scalars
    outgoing)
AssertionError

----------------------------------------------------------------------
Ran 80 tests in 141.074s


py33 errors:
======================================================================
FAIL: Doctest: scilab2py.core.Scilab2Py.get
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/silvester/anaconda/envs/py33/lib/python3.3/doctest.py", line 2179, in runTest
    raise self.failureException(self.format_failure(new.getvalue()))
AssertionError: Failed doctest test for scilab2py.core.Scilab2Py.get
  File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/core.py", line 272, in get

----------------------------------------------------------------------
File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/core.py", line 300, in scilab2py.core.Scilab2Py.get
Failed example:
    sci.get(['x', 'y'])
Expected:
    [u'spam', array([[ 1.,  2.,  3.,  4.]])]
Got:
    ['spam', array([[ 1.,  2.,  3.,  4.]])]


======================================================================
FAIL: Doctest: scilab2py.core.Scilab2Py.put
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/silvester/anaconda/envs/py33/lib/python3.3/doctest.py", line 2179, in runTest
    raise self.failureException(self.format_failure(new.getvalue()))
AssertionError: Failed doctest test for scilab2py.core.Scilab2Py.put
  File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/core.py", line 237, in put

----------------------------------------------------------------------
File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/core.py", line 259, in scilab2py.core.Scilab2Py.put
Failed example:
    sci.get(['x', 'y'])
Expected:
    [u'spam', array([[ 1.,  2.,  3.,  4.]])]
Got:
    ['spam', array([[ 1.,  2.,  3.,  4.]])]


======================================================================
FAIL: Test the creation of a dynamic function
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/tests/test_usage.py", line 74, in test_dynamic
    self.assertEqual(repr(type(item)), "<type 'function'>")
AssertionError: "<class 'function'>" != "<type 'function'>"
- <class 'function'>
?  ^^^^^
+ <type 'function'>
?  ^^^^


======================================================================
FAIL: Doctest: scilab2py
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/silvester/anaconda/envs/py33/lib/python3.3/doctest.py", line 2179, in runTest
    raise self.failureException(self.format_failure(new.getvalue()))
AssertionError: Failed doctest test for scilab2py
  File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/__init__.py", line 1, in scilab2py

----------------------------------------------------------------------
File "/home/silvester/workspace/scilab2py/build/lib/scilab2py/__init__.py", line 12, in scilab2py
Failed example:
    print x, x.dtype
Exception raised:
    Traceback (most recent call last):
      File "/home/silvester/anaconda/envs/py33/lib/python3.3/doctest.py", line 1313, in __run
        compileflags, 1), test.globs)
      File "<doctest scilab2py[3]>", line 1
        print x, x.dtype
              ^
    SyntaxError: invalid syntax


/home/silvester/workspace/scilab2py/build/lib/scilab2py/core.py:381: ResourceWarning: unclosed file <_io.BufferedReader name='/tmp/tmpvloz40.mat'>


